# cfp-ai-tracker

./: CHANGES.md  FINAL_SUMMARY.md  LIVE_DATA_SUMMARY.md  NO_API_KEY_NEEDED.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SETUP.md  debug_espn_api.py  espn_response.json  find_live_games.py  pyproject.toml  test_commentary.py  test_espn_live.py
app/: ai_engine.py  assets.py  config.py  data_sources.py  game_logic.py  main.py  persist.py  store.py
app/static/: styles.css
app/templates/: index.html
cfp_ai_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
demo_data/: demo_events.json
runtime/: state.json
